; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/rapidio/extr_rio-driver.c_rio_dev_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/rapidio/extr_rio-driver.c_rio_dev_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rio_dev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.rio_dev* @rio_dev_get(%struct.rio_dev* %0) #0 {
  %2 = alloca %struct.rio_dev*, align 8
  store %struct.rio_dev* %0, %struct.rio_dev** %2, align 8
  %3 = load %struct.rio_dev*, %struct.rio_dev** %2, align 8
  %4 = icmp ne %struct.rio_dev* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load %struct.rio_dev*, %struct.rio_dev** %2, align 8
  %7 = getelementptr inbounds %struct.rio_dev, %struct.rio_dev* %6, i32 0, i32 0
  %8 = call i32 @get_device(i32* %7)
  br label %9

9:                                                ; preds = %5, %1
  %10 = load %struct.rio_dev*, %struct.rio_dev** %2, align 8
  ret %struct.rio_dev* %10
}

declare dso_local i32 @get_device(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
